Since n3vd doesn't compile correctly even with an externs file, blow it off, and use dyngraph, which mostly works except on mobile.

--- a/main.css
+++ b/main.css
@@ -60,3 +60,8 @@ button { color: black; }
 
 /* hack, use bootstrap instead */
 #chatinput {width: 800px }
+
+
+#listener-chart { 
+  height: 400px;
+}
